fix: correct image names and tags

--- a/apps/base/frontend/deployment.yaml
+++ b/apps/base/frontend/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: frontend:latest
+          image: ghcr.io/maor-klir/study-app-web:latest
           ports:
             - containerPort: 22111
           env:
