--- a/apps/base/backend/deployment.yaml
+++ b/apps/base/backend/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: backend:latest
+          image: ghcr.io/maor-klir/study-app-api:latest
           ports:
             - containerPort: 22112
           resources:
